<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/et_regid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/RegistrationNo"
        android:inputType="numberDecimal"
        android:maxLength="2"/>
    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Name"
        android:inputType="text"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AddNewStudent"
        android:id="@+id/add"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/del"
        android:id="@+id/del"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/CSE"
        android:textColor="@color/Black"
        android:textSize="23sp"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/NameList"
        android:layout_gravity="fill_horizontal"
        android:layout_weight="1"/>


</LinearLayout>